--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
     "date-fns": "^2.19.0",
+    "firebase": "^8.3.0",
     "quasar": "^1.0.0"
   },
   "devDependencies": {
